--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
         <module>mall-product</module>
         <module>mall-ware</module>
         <module>mall-common</module>
-        <module>mall-common</module>
+        <module>renren-fast</module>
+        <module>renren-generator</module>
     </modules>
 
 </project>
