nacos配置命名空间

--- a/mall-coupon/src/main/resources/bootstrap.properties
+++ b/mall-coupon/src/main/resources/bootstrap.properties
@@ -1,2 +1,3 @@
 spring.application.name=mymall-coupon
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+spring.cloud.nacos.config.namespace=58ce4bf5-7afd-4bee-bfe7-931e9f97701a
