--- a/renren-fast/src/main/resources/application.yml
+++ b/renren-fast/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
     max-threads: 1000
     min-spare-threads: 30
   port: 8080
-  connection-timeout: 5000ms
+#  connection-timeout: 5000ms
   servlet:
     context-path: /renren-fast
 
@@ -37,8 +37,15 @@ spring:
         min-idle: 5       # 连接池中的最小空闲连接
   mvc:
     throw-exception-if-no-handler-found: true
+  application:
+    name: renren-fast
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 #  resources:
 #    add-mappings: false
+
 
 
 #mybatis
