--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -11,3 +11,12 @@ spring:
           uri: https://www.baidu.com
           predicates:
             - Query=url, baidu
+
+        - id: admin_route
+          uri: lb://renren-fast
+          predicates:
+            - Path=/api/**
+          filters:
+            - RewritePath=/api/?(?<segment>.*), /renren-fast/$\{segment}
+# 前端项目 /api
+# http://localhost:88/api/captcha.jpg   http://localhost:8080/renren-fast/captcha.jpg
