--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -12,11 +12,16 @@ spring:
           predicates:
             - Query=url, baidu
 
+        - id: product_route
+          uri: lb://mymall-product
+          predicates:
+            - Path=/api/product/**
+          filters:
+            - RewritePath=/api/?(?<segment>.*), /$\{segment}
+
         - id: admin_route
           uri: lb://renren-fast
           predicates:
             - Path=/api/**
           filters:
             - RewritePath=/api/?(?<segment>.*), /renren-fast/$\{segment}
-# 前端项目 /api
-# http://localhost:88/api/captcha.jpg   http://localhost:8080/renren-fast/captcha.jpg
