--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>mall-common</module>
         <module>mall-gateway</module>
         <module>renren-fast</module>
+        <module>renren-generator</module>
     </modules>
 
 </project>
