--- a/mall-product/src/main/resources/application.yml
+++ b/mall-product/src/main/resources/application.yml
@@ -11,6 +11,12 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+    alicloud:
+      access-key: LTAI5tRUDiyFRUXY7DAsEMDH
+      secret-key: ehrYuAYOoME6kwdIx46hOeZPoRXknH
+      oss:
+        endpoint: oss-cn-shenzhen.aliyuncs.com
+
   application:
     name: mymall-product
 
