--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -72,6 +72,13 @@
             <version>3.0.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>2.0.2</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
