--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>mall-gateway</module>
         <module>renren-fast</module>
         <module>renren-generator</module>
+        <module>mall-third-party</module>
     </modules>
 
 </project>
