--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -78,6 +78,12 @@
             <version>6.1.7.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
