--- a/mall-product/src/main/resources/application.yml
+++ b/mall-product/src/main/resources/application.yml
@@ -25,3 +25,8 @@ mybatis-plus:
     db-config:
       id-type: auto
   mapper-locations: classpath:/mapper/**/*.xml
+
+
+logging:
+  level:
+    com.cls.mymall.product.dao: debug
