--- a/mall-product/src/main/resources/bootstrap.properties
+++ b/mall-product/src/main/resources/bootstrap.properties
@@ -1,3 +1,7 @@
 spring.application.name=mymall-product
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
-spring.cloud.nacos.config.namespace=7b9ea2ca-0ff0-454d-b1b9-f4714dc765d4
+spring.cloud.nacos.config.namespace=11bcb872-bb72-4fbd-a5c5-49511a626b4c
+
+spring.cloud.nacos.config.extension-configs[0].data-id=oss.yml
+spring.cloud.nacos.config.extension-configs[0].group=DEFAULT_GROUP
+spring.cloud.nacos.config.extension-configs[0].refresh=true
