--- a/mall-gateway/src/main/resources/application.yml
+++ b/mall-gateway/src/main/resources/application.yml
@@ -2,15 +2,6 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: test_qq
-          uri: https://www.qq.com
-          predicates:
-            - Query=url, qq
-
-        - id: test_baidu
-          uri: https://www.baidu.com
-          predicates:
-            - Query=url, baidu
 
         - id: product_route
           uri: lb://mymall-product
@@ -25,6 +16,13 @@ spring:
             - Path=/api/thirdparty/**
           filters:
             - RewritePath=/api/thirdparty/?(?<segment>.*), /$\{segment}
+
+        - id: member_route
+          uri: lb://mymall-member
+          predicates:
+            - Path=/api/member/**
+          filters:
+            - RewritePath=/api/?(?<segment>.*), /$\{segment}
 
         - id: admin_route
           uri: lb://renren-fast
