--- a/mall-order/src/main/resources/bootstrap.properties
+++ b/mall-order/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
-spring.application.name=mymall-coupon
+spring.application.name=mymall-order
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=591fd564-749d-4565-86eb-ceef652534aa
 
-spring.cloud.nacos.config.extension-configs[0].data-id=coupon.yml
+spring.cloud.nacos.config.extension-configs[0].data-id=order.yml
 spring.cloud.nacos.config.extension-configs[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.extension-configs[0].refresh=true
