--- a/renren-fast/src/main/resources/bootstrap.properties
+++ b/renren-fast/src/main/resources/bootstrap.properties
@@ -2,6 +2,18 @@ spring.application.name=renren-fast
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=591fd564-749d-4565-86eb-ceef652534aa
 
-spring.cloud.nacos.config.extension-configs[0].data-id=application-dev.yml
+spring.cloud.nacos.config.extension-configs[0].data-id=application.yml
 spring.cloud.nacos.config.extension-configs[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.extension-configs[0].refresh=true
+
+spring.cloud.nacos.config.extension-configs[1].data-id=application-dev.yml
+spring.cloud.nacos.config.extension-configs[1].group=DEFAULT_GROUP
+spring.cloud.nacos.config.extension-configs[1].refresh=true
+
+spring.cloud.nacos.config.extension-configs[2].data-id=application-prod.yml
+spring.cloud.nacos.config.extension-configs[2].group=DEFAULT_GROUP
+spring.cloud.nacos.config.extension-configs[2].refresh=true
+
+spring.cloud.nacos.config.extension-configs[3].data-id=application-test.yml
+spring.cloud.nacos.config.extension-configs[3].group=DEFAULT_GROUP
+spring.cloud.nacos.config.extension-configs[3].refresh=true
