--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -84,6 +84,12 @@
             <version>2.0.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.10</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
