--- a/mall-coupon/src/main/resources/bootstrap.properties
+++ b/mall-coupon/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name=mymall-coupon
+spring.application.name=mall-coupon
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=591fd564-749d-4565-86eb-ceef652534aa
 
