--- a/mall-product/src/main/resources/bootstrap.properties
+++ b/mall-product/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name=mymall-product
+spring.application.name=mall-product
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 spring.cloud.nacos.config.namespace=591fd564-749d-4565-86eb-ceef652534aa
 
