--- a/mall-product/src/main/resources/bootstrap.properties
+++ b/mall-product/src/main/resources/bootstrap.properties
@@ -6,6 +6,6 @@ spring.cloud.nacos.config.extension-configs[0].data-id=oss.yml
 spring.cloud.nacos.config.extension-configs[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.extension-configs[0].refresh=true
 
-spring.cloud.nacos.config.extension-configs[1].data-id=product.yml
-spring.cloud.nacos.config.extension-configs[1].group=DEFAULT_GROUP
-spring.cloud.nacos.config.extension-configs[1].refresh=true
+#spring.cloud.nacos.config.extension-configs[1].data-id=product.yml
+#spring.cloud.nacos.config.extension-configs[1].group=DEFAULT_GROUP
+#spring.cloud.nacos.config.extension-configs[1].refresh=true
