--- a/mall-product/src/main/resources/application.properties
+++ b/mall-product/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.cache.type=redis
+
+# \u8FC7\u671F\u65F6\u95F4
+spring.cache.redis.time-to-live=360000
+
+# \u5982\u679C\u6307\u5B9A\u524D\u7F00\u5C31\u4F7F\u7528\u6307\u5B9A\u524D\u7F00\uFF0C\u5982\u679C\u6CA1\u6709\u5C31\u4F7F\u7528\u9ED8\u8BA4\u7F13\u5B58\u7684\u540D\u5B57\u4F5C\u4E3A\u524D\u7F00
+spring.cache.redis.key-prefix=CACHE_
+spring.cache.redis.use-key-prefix=true
+
+#\u662F\u5426\u7F13\u5B58\u7A7A\u503C\u3002\u9632\u6B62\u7F13\u5B58\u7A7F\u900F
+spring.cache.redis.cache-null-values=true
