--- a/mall-search/pom.xml
+++ b/mall-search/pom.xml
@@ -18,6 +18,12 @@
         <elasticsearch.version>7.4.2</elasticsearch.version>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.cls.mymall</groupId>
             <artifactId>mall-common</artifactId>
